# PdS_RUST

./: Cargo.toml  README.md
Esempi/: Cargo.toml
Esempi/Closures/src/: lib.rs
Esempi/Closures/tests/: test_closure.rs
Esempi/Concorrenza/: Cargo.toml
Esempi/Concorrenza/crossbeam/: Cargo.toml
Esempi/Concorrenza/src/: main.rs
Esempi/IO/: Cargo.toml
Esempi/IO/Serialize/: Cargo.toml
Esempi/SmartPointer/: Cargo.toml
Esempi/TdE_2023/: Cargo.toml
Esempi/TdE_2023/src/: main.rs
Esempi/Trait_Index/: Cargo.toml
Esempi/Trait_Index/src/: main.rs
EsempiEsame/: Cargo.toml
EsempiEsame/Concurrency/: Cargo.toml
EsempiEsame/Concurrency/CondVar/: Cargo.toml
EsempiEsame/Concurrency/XBeam/: Cargo.toml
EsempiEsame/Concurrency/src/: main.rs
EsempiEsame/SmartPointers/: Cargo.toml
EsempiEsame/SmartPointers/src/: main.rs
EsempiEsame/cmd/: Cargo.toml
EsempiEsame/cmd/src/: main.rs
EsempiEsame/cmdline/: Cargo.toml
EsempiEsame/cmdline/src/: main.rs
EsempiEsame/collezioni/: Cargo.toml
EsempiEsame/collezioni/src/: lib.rs
EsempiEsame/collezioni/tests/: unit_tests.rs
EsempiEsame/errori/: Cargo.toml
EsempiEsame/errori/src/: main.rs
EsempiEsame/esempi_vari/: Cargo.toml
EsempiEsame/esempi_vari/src/: main.rs
EsempiEsame/io/: Cargo.toml  Serial.txt
EsempiEsame/io/file/: serialized.txt
EsempiEsame/io/src/: main.rs
EsempiEsame/iteratori/: Cargo.toml
EsempiEsame/iteratori/src/: lib.rs
EsempiEsame/iteratori/tests/: unit_test.rs
EsempiEsame/polimorfismo/: Cargo.toml
EsempiEsame/polimorfismo/src/: lib.rs
EsempiEsame/polimorfismo/tests/: test.rs
EsempiEsame/processi/: Cargo.toml
EsempiEsame/processi/src/: main.rs
EsempiEsame/tde_cache/: Cargo.toml
EsempiEsame/tde_cache/src/: lib.rs
EsempiEsame/tde_cache/tests/: unit_tests.rs
EsempiEsame/tde_dispatcher/: Cargo.toml
EsempiEsame/tde_dispatcher/src/: lib.rs
EsempiEsame/tde_dispatcher/tests/: unit_tests.rs
EsempiEsame/tde_dq/: Cargo.toml
EsempiEsame/tde_dq/src/: lib.rs
EsempiEsame/tde_dq/tests/: unit_tests.rs
EsempiEsame/tde_exchanger/: Cargo.toml
EsempiEsame/tde_exchanger/src/: lib.rs
EsempiEsame/tde_exchanger/tests/: unit_tests.rs
EsempiEsame/tde_execlimiter/: Cargo.toml
EsempiEsame/tde_execlimiter/src/: lib.rs
EsempiEsame/tde_execlimiter/tests/: unit_tests.rs
EsempiEsame/tde_looper/: Cargo.toml
EsempiEsame/tde_looper/src/: lib.rs
EsempiEsame/tde_looper/tests/: unit_tests.rs
EsempiEsame/tde_looper2/: Cargo.toml
EsempiEsame/tde_looper2/src/: main.rs
EsempiEsame/tde_mpmc/: Cargo.toml
EsempiEsame/tde_mpmc/src/: lib.rs
EsempiEsame/tde_mpmc/tests/: unit_test.rs
EsempiEsame/tde_multichannel/: Cargo.toml
EsempiEsame/tde_multichannel/src/: lib.rs
EsempiEsame/tde_multichannel/tests/: unit_tests.rs
EsempiEsame/tde_rankingbarrier/: Cargo.toml
EsempiEsame/tde_rankingbarrier/src/: lib.rs
EsempiEsame/tde_rankingbarrier/tests/: unit_tests.rs
Laboratori/: Cargo.toml  README.md
Laboratori/lab1/es1_lab1/: Cargo.toml
Prova/: Cargo.toml
Prova/AltraProva/: Cargo.toml
(+25 files in other folders)
