workspace = { members = [ "Esempi", "Esempi/Trait_Index", "Laboratori",
    "Laboratori/lab1","Laboratori/lab1/es1_lab1", "Laboratori/lab1/es2_lab1",
    "Laboratori/lab2","Laboratori/lab2/es1_lab2", "Laboratori/lab2/es2_lab2", "Laboratori/lab2/es3_lab2",
    "Laboratori/lab2/es1b_lab2",
    "Esempi", "Esempi/Trait_Index",
    "Prova", "Prova/AltraProva"
] }
[package]
name = "PdS_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
