workspace = { members = [
    "Esempi",
        "Esempi/Trait_Index",
        "Esempi/Closures",
        "Esempi/Collections",
        "Esempi/Iterators",
        "Esempi/IO", "Esempi/IO/Serialize",
        "Esempi/SmartPointer",
        "Esempi/Concorrenza",
        "Esempi/Concorrenza/thread",
        "Esempi/Concorrenza/mutex",
        "Esempi/Concorrenza/condvar",
    "Esempi/Concorrenza/crossbeam",
    "Esempi/Concorrenza/channel",
    "EsempiEsame",
        "EsempiEsame/tde_multichannel",
        "EsempiEsame/tde_mpmc",
        "EsempiEsame/esempi_vari",
        "EsempiEsame/errori",
        "EsempiEsame/io",
        "EsempiEsame/collezioni",
        "EsempiEsame/iteratori",
        "EsempiEsame/processi",
        "EsempiEsame/tde_looper",
        "EsempiEsame/tde_dq",
        "EsempiEsame/polimorfismo",
        "EsempiEsame/SmartPointers",
        "EsempiEsame/Concurrency",
        "EsempiEsame/Concurrency/CondVar",
        "EsempiEsame/Concurrency/Channel",
        "EsempiEsame/Concurrency/XBeam",
    "Laboratori",
        "Laboratori/lab1",
            "Laboratori/lab1/es1_lab1",
            "Laboratori/lab1/es2_lab1",
        "Laboratori/lab2",
            "Laboratori/lab2/es1_lab2",
            "Laboratori/lab2/es2_lab2",
            "Laboratori/lab2/es3_lab2",
            "Laboratori/lab2/es1b_lab2",
        "Laboratori/lab3",
        "Laboratori/lab4"
, "EsempiEsame"] }
[package]
name = "PdS_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
